<resources>
    <string name="app_name">TTModificationApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <color name="primary">#ffc000</color>
    <color name="valid">#00b159</color>
    <color name="invalid">#BF1E4B</color>
    <color name="secondary">#000000</color>
    <color name="primary_dark">#000000</color>
    <color name="accent">#000000</color>
    <color name="tabsScrollColor">#000000</color>
    <color name="text_icons">#000000</color>


    //Charge card
    <string name="welcome">Welcome To TinyTowne</string>
    <string name="trackButton">Track\n(5 credits)</string>
    <string name="trackForceButton">Track Force\n(5 credits)</string>
    <string name="trainButton">Train\n(3 credits)</string>
    <string name="trainForceButton">Train Force\n(3 credits)</string>
    <string name="creditsButton">Check Credits</string>
    <string name="cancelButton">Cancel</string>


    <string name="promptMessage">Please tap your card on the device</string>
    <string name="waitMessage">Please wait while the server processes your request...</string>

    //This is to keep track if the application has been idle
    <string name="inactivityTimeoutDuration">10000</string>
    <string name="timeoutInterval">1000</string>
    //

    //This is the length of time the "success message is being displayed"
    <string name="successTimerDuration">5000</string>
    <string name="successTimerInterval">1000</string>
    //////

    <string name="changePicture">New Picture</string>
    <string name="savePicture">Save Picture</string>


    <string name="driverIdText">0123456789</string>
    <string name="firstNameText">Ivan</string>
    <string name="lastNameText">Mba</string>
    <string name="dobText">08/20/1992</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_validation">ValidationActivity</string>


    <string name="serverUploadUrl">http://ganottwebapi1.tinytowne.com/api/admission/UploadDriverPicture</string>
    <string name="serverRequestDriverUrl">http://ganottwebapi1.tinytowne.com/api/Entitlements/GetDriver</string>
    <string name="serverRequestGetDriverPictureUrl">http://ganottwebapi1.tinytowne.com/api/transactions/GetScaledDriverPicture?DriverId=</string>
    <string name="serverChargeCardUrl">http://ganottwebapi1.tinytowne.com/api/entitlements/chargecard</string>
    <string name="serverCheckCreditUrl">http://ganottwebapi1.tinytowne.com/api/entitlements/getdriverentitlements</string>

    <string name="connectionTimeoutDuration">20000</string>
    <string name="responseTimeoutDuration">20000</string>

    // New API endpoints
    <string name="serverGetChargeButtonsUrl">http://ganottwebapi1.tinytowne.com/api/chargebuttons/GetAll</string>
    <string name="serverCreateChargeButtonUrl">http://ganottwebapi1.tinytowne.com/api/chargebuttons/Create</string>
    <string name="serverUpdateChargeButtonUrl">http://ganottwebapi1.tinytowne.com/api/chargebuttons/Update</string>
    <string name="serverDeleteChargeButtonUrl">http://ganottwebapi1.tinytowne.com/api/chargebuttons/Delete</string>
    <string name="serverGetEntitlementTypesUrl">http://ganottwebapi1.tinytowne.com/api/entitlementtypes/GetAll</string>
    <string name="serverGetTransactionHistoryUrl">http://ganottwebapi1.tinytowne.com/api/reports/GetTransactionHistory</string>
    <string name="serverGetDailyReportUrl">http://ganottwebapi1.tinytowne.com/api/reports/GetDailyReport</string>
    <string name="serverGetKioskOptionsUrl">http://ganottwebapi1.tinytowne.com/api/kiosk/GetPurchaseOptions</string>
    <string name="serverProcessKioskPurchaseUrl">http://ganottwebapi1.tinytowne.com/api/kiosk/ProcessPurchase</string>
    <string name="serverValidatePinUrl">http://ganottwebapi1.tinytowne.com/api/auth/ValidatePin</string>
    <string name="serverGetStandardCardsUrl">http://ganottwebapi1.tinytowne.com/api/standardcards/GetAll</string>
    <string name="serverCreateStandardCardUrl">http://ganottwebapi1.tinytowne.com/api/standardcards/Create</string>
    <string name="serverUpdateStandardCardUrl">http://ganottwebapi1.tinytowne.com/api/standardcards/Update</string>
    <string name="serverDeleteStandardCardUrl">http://ganottwebapi1.tinytowne.com/api/standardcards/Delete</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_process_credits">ProcessCreditsActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_charge_card">ChargeCardActivity</string>
    <string name="title_activity_sdidriving_session">SDIDrivingSessionActivity</string>
</resources>
