<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Status/message area -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="100"
        android:textSize="25dp"
        android:text="@string/welcome"
        android:id="@+id/textView"
        android:textColor="#1d1d1d"
        android:background="#FFFFFF"
        android:textAlignment="center"
        android:scrollbars="vertical"
        android:padding="15dp"/>

    <!-- Dynamic charge buttons grid -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chargeButtonGrid"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="8dp"/>

    <!-- Fixed bottom row: Check Credits + Cancel -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/creditsButton"
            android:id="@+id/credits"
            android:textColor="#FFFFFF"
            android:background="#e3a21a"
            android:layout_marginEnd="4dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/cancelButton"
            android:id="@+id/cancel"
            android:textColor="#FFFFFF"
            android:background="#00aba9"
            android:layout_marginStart="4dp"/>
    </LinearLayout>
</LinearLayout>
